# MIDI_Juce_demo

./: .gitignore  CMakeLists.txt  ERROR_FIX_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  LOGIC_PRO_TESTING_GUIDE.md  LOGIC_PRO_USAGE_GUIDE.md  PROJECT_SUMMARY.md  PianoTrackReader.jucer  QUICK_START_LOGIC.md  README.md  build.sh  test_plugin.sh  test_plugin_logic.sh
PianoTrackReader/: CMakeLists.txt
PianoTrackReader/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
